--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta nev="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta vezetek="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
@@ -12,6 +12,15 @@
 
   </head>
   <body>
+    <nav class="navbar navbar-expand-sm  navbar-dark" style="background-color: black; margin-bottom:20px;">
+
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" href="./add.html">Hozzáad</a>
+        </li>
+      </ul>
+    </nav>
+
             <div class="container text-center">
               <h2 >Adatok</h2>
 <hr>
@@ -22,11 +31,11 @@
               <table border=8 >
                 <thead>
                     <td>ID</td>
-                    <td>nev</td>
+                    <td>vezeteknév</td>
+                    <td>Keresztnév</td>
                     <td>Email</td>
-                    <td>cím</td>
-                    <td>kor</td>
-                    <td>Bankartya</td>
+                    <td>születési év</td>
+                    <td>Osztály</td>
                     <td></td>
     
     
